--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
 <body>
 
+<div class='hero'>
+<img src="/img/hero.png">
 <div class='container'>
 <div class='cover'>
 <h2>hello@nestd.co</h2>
-</div>
-  
+    </div>
+  </div>  
 </body>
 
 </html>
