--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 <body>
 
 <div class='hero'>
-<img src="/img/hero.png">
-<div class='container'>
+
+  <img src="hero.png" alt="hero">
+
+  <div class='container'>
 <div class='cover'>
 <h2>hello@nestd.co</h2>
     </div>
-  </div>  
+  </div>
+  </div>
 </body>
 
 </html>
