--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
   <img src="hero.png" alt="hero">
 
-  <div class='container'>
-<div class='cover'>
-<h2>hello@nestd.co</h2>
+ <!--placeholder  <div class='container'>
+    <div class='cover'>
+    <h2>hello@nestd.co</h2>
     </div>
-  </div>
+  </div> -->
+  
   </div>
 </body>
 
