--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 
 <body>
 
-<div class='hero'>
 
-  <img src="hero.png" alt="hero">
 
- <!--placeholder  <div class='container'>
-    <div class='cover'>
-    <h2>hello@nestd.co</h2>
+<div class='container'>
+  <div class='cover'>
+    <div class='hero'>
+      <img src="hero.png" alt="hero">
     </div>
-  </div> -->
-  
-  </div>
+  </div>  
+</div>
+
 </body>
 
 </html>
