--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 </head>
 
 <body>
-<div class='hero'>
-<img src="hero.png" alt="hero">
+
+  <div class='hero'>
+<img src="/img/hero.png" alt="hero">
+  
 <div class='container'>
 <div class='cover'>
 </div>
