--- a/index.html
+++ b/index.html
@@ -1,115 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nestd</title>
-    <link rel="stylesheet" href="styles.css">
+  <!-- meta -->
+  <title>nestd</title>
+  <meta name="description" content="nestd">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
+
+  <!-- css -->
+  <link type="text/css" rel="stylesheet" href="/css/main.css">
+
+  <!--fonts-->
+  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" />
+
+  <!-- js -->
+
 </head>
+
 <body>
-    <header class="main-header">
-        <nav class="nav-container">
-            <div class="logo">
-                <a href="#home">nestd</a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#collections">Collections</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section id="home" class="hero">
-            <h1>Text</h1>
-            <p>text</p>
-        </section>
+  <div class='hero'>
+<img src="/img/hero.png" alt="hero">
 
-        <section id="collections" class="collection-grid">
-            <div class="piece">
-                <div class="piece-image">
-                    <img src="/api/placeholder/800/1000" alt="Silver Ring with Moonstone">
-                </div>
-                <div class="piece-details">
-                    <h2>Silver Ring with Moonstone</h2>
-                    <p>Hand-forged sterling silver with ethically sourced moonstone</p>
-                    <button class="contact-btn" onclick="contactAboutPiece('Silver Ring with Moonstone')">
-                        Inquire About This Piece
-                    </button>
-                </div>
-            </div>
+<div class='container'>
+<div class='cover'>
+</div>
+  <h2></h2>
+</div>  
+</div>
 
-            <div class="piece">
-                <div class="piece-image">
-                    <img src="/api/placeholder/800/1000" alt="Gold Pendant Necklace">
-                </div>
-                <div class="piece-details">
-                    <h2>Gold Pendant Necklace</h2>
-                    <p>14k gold with customizable chain length</p>
-                    <button class="contact-btn" onclick="contactAboutPiece('Gold Pendant Necklace')">
-                        Inquire About This Piece
-                    </button>
-                </div>
-            </div>
-
-            <div class="piece">
-                <div class="piece-image">
-                    <img src="/api/placeholder/800/1000" alt="Pearl Drop Earrings">
-                </div>
-                <div class="piece-details">
-                    <h2>Pearl Drop Earrings</h2>
-                    <p>Freshwater pearls with sterling silver settings</p>
-                    <button class="contact-btn" onclick="contactAboutPiece('Pearl Drop Earrings')">
-                        Inquire About This Piece
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <section id="about" class="about-section">
-            <div class="about-content">
-                <h2>About Our Process</h2>
-                <p>Each piece is meticulously handcrafted in our studio, ensuring the highest quality and attention to detail. We work closely with our clients to create unique pieces that reflect their personal style and story.</p>
-            </div>
-        </section>
-
-        <section id="contact" class="contact-section">
-            <h2>Contact Us</h2>
-            <form id="contact-form">
-                <div class="form-group">
-                    <input type="text" id="name" name="name" required>
-                    <label for="name">Name</label>
-                </div>
-                <div class="form-group">
-                    <input type="email" id="email" name="email" required>
-                    <label for="email">Email</label>
-                </div>
-                <div class="form-group">
-                    <input type="text" id="piece" name="piece" required>
-                    <label for="piece">Piece of Interest</label>
-                </div>
-                <div class="form-group">
-                    <textarea id="message" name="message" required></textarea>
-                    <label for="message">Your Message</label>
-                </div>
-                <button type="submit" class="submit-btn">Send Inquiry</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Artisan Jewelry. All rights reserved.</p>
-    </footer>
-
-    <script>
-        function contactAboutPiece(pieceName) {
-            const piece = document.getElementById('piece');
-            const message = document.getElementById('message');
-            piece.value = pieceName;
-            message.value = `I'm interested in learning more about the ${pieceName}.`;
-            document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
-        }
-    </script>
 </body>
+
 </html>
